# Calimero

./: .gitignore  CMakeLists.txt  CalimeroCPack.txt  LICENSE  Readme  TODO.txt
calimero/: calimero_de.ts  calimero_en.qm  create_project.bat  create_project_debug.bat  main.cpp
calimero/algs/: Algorithms.h
calimero/algs/ga/: Gaalg.h  gadata.txt  galog.txt
calimero/core/: CalculationVariable.h  CalibrationVariable.h  CoreEngine.cpp  CoreEngine.h  FileLoader.cpp  IterationResult.cpp  IterationResult.h  Language.cpp  Variable.cpp  Variable.h  VariableContainer.h
calimero/gui/: CalibrationEditGui.h  Controller.cpp  DiagramGui.cpp  Gui.h  ParameterChooserGui.h  ParameterEditGui.cpp  ParameterEditGui.h  ParameterFilesGui.h  ParameterGroupEditGui.h  ParameterTextEdit.h  ProgressBar.cpp  ProgressBar.h  calibrationedit.ui  parameteredit.ui  progressbar.ui
calimero/persistence/: ParameterPersistenceEvaluator.cpp  ParameterPersistenceEvaluator.h  Persistence.h
calimero/qtscript/: ScriptLibary.h  scripteditwidget.h  scripteditwidget.ui
debian/: README.Debian  README.source  calimero.cron.d.ex  calimero.default.ex  calimero.doc-base.EX  changelog  control  copyright  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
doc/: Doxyfile
scripts/: CMakeLists.txt  backend_qt4.py  backend_qt4agg.py  calimeropublic.py  figureoptions.py  libcalibrationalgorithm.py  libcalimerotemplates.py  libobjectivefunction.py  libresulthandler.py  pybrainalgs.py  roalback.py  sum.py  test.py  test1.py  testcali.py  testcalibration.py
src/: CMakeLists.txt  calimero.pro  calimero_de.qm  calimero_en.ts  main.cpp
src/algs/: Algorithm.h  Algorithms.cpp
src/algs/ga/: Gaalg.cpp
src/app/: CMakeLists.txt  diagramgui.cpp  diagramgui.h  diagramscene.cpp  diagramscene.h  functionparametersdialog.cpp  functionparametersdialog.h  functionparametersdialog.ui  groupmanager.cpp  groupmanager.h  groupmanager.ui  guilogsink.cpp  guilogsink.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parametertextedit.cpp  parametertextedit.h  resultanalysisdialog.cpp  resultanalysisdialog.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  stringparameteredit.cpp  stringparameteredit.h  stringparameteredit.ui
src/calimerocore/: CMakeLists.txt  Calibration.cpp  Calibration.h  CalibrationEnv.cpp  CalibrationEnv.h  CalibrationVariable.cpp  CalibrationVariable.h  CalimeroGlob.h  Domain.cpp  Domain.h  Exception.cpp  Exception.h  ExternalParameterRegistry.cpp  ExternalParameterRegistry.h  ICalibrationAlg.h  IFunction.h  IFunctionFactory.h  IModelSimulator.h  IObjectiveFunction.h  IResultHandler.h  IterationResult.cpp  IterationResult.h  Log.cpp  Log.h  LogSink.cpp  LogSink.h  Logger.cpp  Logger.h  ModelSimRunnable.cpp  ModelSimRunnable.h  ModelSimThreadPool.cpp  ModelSimThreadPool.h  ObjectiveFunctionVariable.cpp  ObjectiveFunctionVariable.h  Registry.h  Variable.cpp  Variable.h
src/calimerohelper/: CMakeLists.txt  FunctionLoader.cpp  FunctionLoader.h  Persistence.cpp  Persistence.h
src/core/: CalculationVariable.cpp  CalibrationVariable.cpp  FileLoader.h  IterationRunnable.cpp  IterationRunnable.h  Language.h  MessageHandler.h  Model.cpp  Model.h
src/dummyfunctions/: CMakeLists.txt  DummyFunction.cpp  DummyFunction.h
src/gui/: CMakeLists.txt  CalibrationEditGui.cpp  CalibrationEditGui.h  CompareParameterEditGui.cpp  CompareParameterEditGui.h  Controller.h  DiagramGui.h  Diagramscene.cpp  Diagramscene.h  Gui.cpp  Gui.h  ParameterChooserGui.cpp  ParameterEditGui.h  ParameterFilesGui.cpp  ParameterFilesGui.h  ParameterGroupEditGui.cpp  ParameterTextEdit.cpp  SettingsDialog.cpp  SettingsDialog.h  compareparameteredit.ui  diagramgui.cpp  diagramgui.h  diagramscene.cpp  diagramscene.h  functionparametersdialog.cpp  groupmanager.cpp  guilogsink.cpp  guilogsink.h  inputparameteredit.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parameterchooser.ui  parameterfiles.ui  parametertextedit.cpp  parametertextedit.h  resultanalysisdialog.cpp  resultanalysisdialog.ui  settingsdialog.cpp  (+5 more)
src/nativefunctions/: BruteForceSearch.cpp  BruteForceSearch.h  CMakeLists.txt  ExternalModel.cpp  ExternalModel.h  Functions.cpp  ModelSimulatorHandler.cpp  ModelSimulatorHandler.h  NativeErrorSquare.cpp  TestCalibrationAlg.cpp  TestCalibrationAlg.h  TestFunction.cpp  TestFunction.h  TestModel.cpp  TestModel.h
src/optimizationalgs/: Functions.cpp  GeneticAlgorithm.cpp
src/persistence/: Persistence.cpp
src/plugins/: CMakeLists.txt
src/plugins/dummyfunctions/: CMakeLists.txt  DummyFunction.cpp  DummyFunction.h  DummyModel.cpp  DummyModel.h  Functions.cpp
src/plugins/nativefunctions/: BruteForceSearch.cpp  BruteForceSearch.h  CMakeLists.txt  ExternalModel.cpp  ExternalModel.h  Functions.cpp  NativeErrorSquare.cpp  NativeErrorSquare.h  TestCalibrationAlg.cpp  TestCalibrationAlg.h  TestFunction.cpp  TestFunction.h  TestModel.cpp  TestModel.h
src/plugins/optimizationalgs/: CMakeLists.txt  Functions.cpp  GeneticAlgorithm.cpp  GeneticAlgorithm.h  ParticleSwarmAlgorithm.cpp  ParticleSwarmAlgorithm.h
src/python/: CMakeLists.txt  PyCalibrationAlgWrapper.h  PyCalibrationEnvWrapper.h  PyCalibrationWrapper.h  PyDomainWrapper.h  PyEnv.cpp  PyEnv.h  PyException.cpp  PyException.h  PyFunctionFactory.cpp  PyFunctionLoader.cpp  PyFunctionLoader.h  PyIFunctionWrapper.h  PyIModelSimulatorWrapper.h  PyIterationResultWrapper.h  PyObjectiveFunctionWrapper.h  PyRegistryWrapper.h  PyResultHandlerWrapper.h  PyVariableWrapper.h
src/python-swig/: CMakeLists.txt  PyEnv.cpp  PyEnv.h  PyFunctionLoader.cpp  pycalimero.i
src/qtscript/: ScriptLibary.cpp  scripteditwidget.cpp
src/registryapp/: CMakeLists.txt  main.cpp
testing/examples/: README.txt
testing/examples/Calibrations/: BruteForceSearch.cmp  dummy.cmp  gentest.cmp  hw.cmp  particleswarmexample.cmp
