CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT(calimero)

IF (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
        MESSAGE(STATUS "Using Visual C compilers")
        SET(CMAKE_CXX_FLAGS "/EHsc")
ENDIF()

IF (${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
        MESSAGE(STATUS "Using GNU compilers")
        SET(CMAKE_CXX_FLAGS "-g -Wall")
ENDIF()

INCLUDE_DIRECTORIES(src/calimerocore
                    src/python
                    src/nativefunctions
                    src/calimerohelper
                    )


FIND_PACKAGE(Qt4 REQUIRED)

FIND_PACKAGE(Boost 1.41.0 COMPONENTS system signals python program_options thread date_time filesystem REQUIRED)

#SET(Boost_USE_STATIC_LIBS ON)
ADD_DEFINITIONS(${Boost_LIB_DIAGNOSTIC_DEFINITIONS})
SET(Boost_USE_MULTITHREADED ON)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

if (CMAKE_BUILD_TYPE STREQUAL Debug)
        MESSAGE(STATUS Debug)
        ADD_DEFINITIONS(-DDEBUG)
else ()
        MESSAGE(STATUS Release)
endif()

MESSAGE(STATUS ${CMAKE_CXX_COMPILER_ID})
SET(QT_USE_QTXML true)
SET(QT_USE_QTSVG true)
SET(QT_NOTUSE_QTGUI true)
ADD_DEFINITIONS(-DQT_NO_KEYWORDS)
INCLUDE(${QT_USE_FILE})
SET(LIBRARY_OUTPUT_PATH ${calimero_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${calimero_BINARY_DIR})

ADD_SUBDIRECTORY(src/calimerocore)
ADD_SUBDIRECTORY(src/python)
ADD_SUBDIRECTORY(src/nativefunctions)
ADD_SUBDIRECTORY(src/app)
ADD_SUBDIRECTORY(src/calimerohelper)
ADD_SUBDIRECTORY(src/registryapp)
ADD_SUBDIRECTORY(scripts)

INCLUDE(CalimeroCPack.txt)
