FILE(GLOB_RECURSE CPP_FILES ./ *.cpp)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIR})
ADD_LIBRARY(calimerocore SHARED ${CPP_FILES})
TARGET_LINK_LIBRARIES(calimerocore ${QT_LIBRARIES} ${PYTHON_LIBRARIES} ${Boost_PYTHON_LIBRARY})
SET_TARGET_PROPERTIES(calimerocore
PROPERTIES
OUTPUT_NAME "calimerocore"
PREFIX ""
)

INSTALL(TARGETS calimerocore
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib)
