FILE(GLOB_RECURSE CPP_FILES *.cpp)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIR})
ADD_LIBRARY(calimerocore SHARED ${CPP_FILES})
TARGET_LINK_LIBRARIES(calimerocore ${Boost_LIBRARIES} ${QT_LIBRARIES} ${PYTHON_LIBRARIES} )
SET_TARGET_PROPERTIES(calimerocore
    PROPERTIES
    OUTPUT_NAME "calimerocore"
    PREFIX ""
)

INSTALL(TARGETS calimerocore
        DESTINATION bin
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
