FILE(GLOB APP_CPP *.cpp)


ADD_EXECUTABLE(regapp ${APP_CPP})

IF (${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
        TARGET_LINK_LIBRARIES(regapp ${QT_QTGUI_LIBRARY} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${QT_QTMAIN_LIBRARY})
ELSE()
        TARGET_LINK_LIBRARIES(regapp ${QT_LIBRARIES} ${QT_QTMAIN_LIBRARY})
ENDIF()

INSTALL(TARGETS regapp RUNTIME DESTINATION bin)
